dvisvgm-0.8.4
- improved command line parser to be more POSIX-compliant
- fixed clipping bug in PostScript handler
- fixed bug in computation of bounding box

dvisvgm-0.8.3
- added basic evaluation of the PostScript "show" operator
  (handles PSTricks Type 3 fonts properly now)
- improved checks for Ghostscript and potrace library in configure script
- external Ghostscript and potrace development files are used if available
- PostScript header/prologue files are now loaded regardless of converted page
- replaced command-line option variant --cache=? by --cache

dvisvgm-0.8.2
- changed license of dvisvgm to GPL version 3 or later
- replaced getopt-based commandline parser by own implementation
  in order to simplify future internationalizations
- fixed memory bug in fontmap reader

dvisvgm-0.8.1
- added evaluation of more psfile parameters
- fixed computation of bounding box in psfile special
- fixed compilation errors and a conversion bug occurred on x64 systems

dvisvgm-0.8
- experimental evaluation of PostScript specials has been added (requires 
  a recent version of the Ghostscript shared library libgs.so or gsdll32.dll)
- several code improvements and refactorings
- fixed compilation bug occurred when using GCC 4.4.x

dvisvgm-0.7.3
- fixed bug in font map reader that could cause a segmentation fault
- fixed bug in creation of shorthand path drawing commands
- fixed bug in TPIC special handler

dvisvgm-0.7.2
- font caching has been added (speeds up embedding of bitmap fonts)
- added option --trace-all that enables tracing of all glyphs of all
  bitmap fonts used in the currect DVI file. Even glyphs that are currently
  not needed are considered. This avoids multiple calls of Metafont for the 
  same fonts. In combination with the new caching functionality this can 
  drastically increase the speed of successive dvisvgm calls.
- if option --no-fonts is used, all glyph sizes are now computed correctly
- use shorthand path commands in SVG fonts if possible
